components/opendora-chart/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    route.openshift.io/termination: "edge"
  labels:
    app.kubernetes.io/instance: apache-devlake-chart
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: open-dora-helm-chart
    app.kubernetes.io/version: 0.3.1
    helm.sh/chart: open-dora-helm-chart-0.3.1
  name: open-dora
  namespace: apache-devlake
spec:
  rules:
    - host: open-dora-apache-devlake.apps.dev-acm.v3socp.boo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-dora-helm-chart
                port:
                  name: http
