components/opendora-chart/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: apache-devlake-chart
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: open-dora-helm-chart
    app.kubernetes.io/version: 0.3.1
    helm.sh/chart: open-dora-helm-chart-0.3.1
  name: open-dora
  namespace: apache-devlake
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: open-dora-helm-chart
    weight: 100
  wildcardPolicy: None
